--- a/pokedex/app/assets/stylesheets/static_pages.scss
+++ b/pokedex/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+img{
+  width: 20px;
+  height: 20px;
+  padding-right: 5px;
+}
+li{
+  list-style: decimal;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  vertical-align: middle;
+  padding: 2px;
+}
